<resources>
    <string name="app_name">충암 급식</string>

    <string name="loading">데이터 수집중…</string>S
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="calendar">0000. 0. 0. (?)</string>
    <string name="action_settings">Settings</string>
    <string name="error_connection">접속 실패</string>
    <string name="error_no_data">급식이 존재하지 않습니다.</string>
    <string name="error_save_cache">캐시 저장에 실패했습니다.</string>
    <string name="msg_set_date">날짜로 설정되었습니다.</string>
    <string name="msg_refresh">급식 정보를 다시 로드했습니다.</string>
    <string name="drawer_open">메뉴 열기</string>
    <string name="drawer_close">메뉴 닫기</string>
    <string name="send_to">앱 공유하기</string>
    <string name="send_message">충암인의 필수 앱!\n쉽고 간편하게 급식 정보를 확인하세요.\nhttps://play.google.com/store/apps/details?id=kr.efe.choongamlunch</string>
    <string name="settings_title">환경 설정</string>
    <string name="settings_lunch_only_title">중식만 표시</string>
    <string name="settings_lunch_only_summary">석식을 표기하지 않습니다.</string>
    <string name="settings_load_all_title">미리 로드</string>
    <string name="settings_load_all_summary">이번 달 급식 정보를 모두 받아놓습니다.</string>
    <string name="settings_delete_cache_title">캐시 제거</string>
    <string name="settings_delete_cache_summary">저장된 급식 정보를 초기화합니다.</string>
    <string name="settings_app_version_title">앱 버전</string>
    <string name="load_all_dialog">몇십 초 가량 소모되며, Wi-fi 환경에서 권장합니다.</string>
    <string name="load_all_dialog_positive">로드 시작</string>
    <string name="load_all_dialog_negative">취소</string>
    <string name="load_all_start">로드를 시작합니다…</string>
    <string name="load_all_finish">이번 달 급식을 모두 로드했습니다.</string>
    <string name="delete_cache">저장된 캐시가 모두 제거되었습니다.</string>
    <string name="action_yesterday">어제 급식</string>
    <string name="action_tomorrow">내일 급식</string>
    
    <string-array name="dayOfWeek">
        <item>일</item>
        <item>월</item>
        <item>화</item>
        <item>수</item>
        <item>목</item>
        <item>금</item>
        <item>토</item>
    </string-array>

    <string-array name="drawerItems">
        <item>공유</item>
        <item>앱 평가</item>
        <item>홈페이지</item>
        <item>환경설정</item>
    </string-array>

</resources>
