<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/content_layout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:scrollbars="none">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </View>

            </ScrollView>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:background="@color/background"
                    android:id="@+id/top_layout">

                    <ImageView
                        android:id="@+id/app_image"
                        android:src="@mipmap/ic_launcher"
                        android:layout_width="96dp"
                        android:layout_height="96dp"
                        android:contentDescription="@string/app_name" />

                    <TextView
                        android:id="@+id/calendar_text"
                        android:text="@string/calendar"
                        android:textSize="10pt"
                        android:gravity="center"
                        android:padding="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="top"
                    android:id="@+id/lunch_layout">

                    <TextView
                        android:text="@string/lunch"
                        android:textSize="11pt"
                        android:textColor="@color/meal_title"
                        android:paddingTop="16dp"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/lunch"
                        android:text="@string/loading"
                        android:textSize="15sp"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:background="@color/divider" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="top"
                    android:id="@+id/dinner_layout">

                    <TextView
                        android:text="@string/dinner"
                        android:textSize="11pt"
                        android:textColor="@color/meal_title"
                        android:paddingTop="16dp"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/dinner"
                        android:text="@string/loading"
                        android:textSize="15sp"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </LinearLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">

                <com.getbase.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|bottom"
                    fab:fab_icon="@drawable/ic_calendar"
                    fab:fab_colorNormal="@color/fab_normal"
                    fab:fab_colorPressed="@color/fab_pressed" />

            </FrameLayout>

        </RelativeLayout>

    </android.support.v4.widget.SwipeRefreshLayout>

    <ListView
        android:id="@+id/drawer_list"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="10dp"
        android:background="@color/drawer_background"/>

</android.support.v4.widget.DrawerLayout>
